--- a/android/PinkOctopusProject/app/src/main/AndroidManifest.xml
+++ b/android/PinkOctopusProject/app/src/main/AndroidManifest.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ambergleam.android.pinkoctopusproject" >
+<manifest package="com.ambergleam.android.pinkoctopusproject"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:logo="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".BaseApplication"
-        android:theme="@style/AppTheme" >
+        android:logo="@mipmap/ic_launcher"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".controller.LibraryActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".controller.StoryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTop"
+            android:screenOrientation="landscape"/>
         <activity android:name=".controller.AboutActivity"/>
         <activity android:name=".controller.SettingsActivity"/>
     </application>
