--- a/android/PinkOctopusProject/app/src/main/AndroidManifest.xml
+++ b/android/PinkOctopusProject/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.ambergleam.android.pinkoctopusproject"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.ambergleam.android.pinkoctopusproject"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".BaseApplication"
@@ -9,6 +10,7 @@
         android:label="@string/app_name"
         android:logo="@mipmap/ic_launcher"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".controller.LibraryActivity"
             android:label="@string/app_name">
@@ -17,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".controller.StoryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -24,6 +27,7 @@
             android:screenOrientation="landscape"/>
         <activity android:name=".controller.AboutActivity"/>
         <activity android:name=".controller.SettingsActivity"/>
+
     </application>
 
 </manifest>
