--- a/android/PinkOctopusProject/app/src/main/AndroidManifest.xml
+++ b/android/PinkOctopusProject/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.ambergleam.android.pinkoctopusproject"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
